--- a/original/thermostat/index.html
+++ b/original/thermostat/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Thermostat</title>
+    <link rel="stylesheet" type="text/css" href="index.css" />
   </head>
   <body>
     <section>
@@ -16,5 +17,6 @@
       </p>
     </section>
     <script src="src/thermostat.js"></script>
+    <script src="interface.js"></script>
   </body>
 </html>
