--- a/original/thermostat/index.html
+++ b/original/thermostat/index.html
@@ -6,6 +6,13 @@
   </head>
   <body>
     <section>
+      <h1>Current temperature: <span id="current-temperature">loading...</span></h1>
+      <select id="current-city">
+        <option value="London">London</option>
+        <option value="New york">New York</option>
+        <option value="Paris">Paris</option>
+        <option value="Tokyo">Tokyo</option>
+      </select>
       <h1 id="temperature">20</h1>
       <p>
         <button id="temperature-up">+</button>
